force-app/main/default/objects/Source_System__c/Source_System__c.object-meta.xml
<CustomObject>
    <label>Source System</label>
    <pluralLabel>Source Systems</pluralLabel>
    <nameField>
        <label>Source System Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Configuration record for each inbound revenue data source (WideOrbit, Strata, CoxReps, Operative, Counterpoint). Drives transformer selection and encoding settings.</description>
</CustomObject>