force-app/main/default/objects/Source_System__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <length>50</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <type>Text</type>
</CustomField>