force-app/main/default/objects/Source_System__c/fields/Expected_Frequency_Days__c.field-meta.xml
<CustomField>
    <fullName>Expected_Frequency_Days__c</fullName>
    <label>Expected Frequency (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>