force-app/main/default/objects/Source_System__c/fields/File_Encoding__c.field-meta.xml
<CustomField>
    <fullName>File_Encoding__c</fullName>
    <label>File Encoding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UTF-8</fullName>
                <default>true</default>
                <label>UTF-8</label>
            </value>
            <value>
                <fullName>UTF-16</fullName>
                <label>UTF-16 (with BOM)</label>
            </value>
            <value>
                <fullName>CP1252</fullName>
                <label>CP1252 (Windows Latin-1)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>