force-app/main/default/objects/Source_System__c/fields/Last_Load_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Load_Date__c</fullName>
    <label>Last Load Date</label>
    <type>DateTime</type>
    <description>Timestamp of the most recent successful file load. Updated by IngestService after each successful batch.</description>
</CustomField>