force-app/main/default/objects/Source_System__c/fields/Last_Uploaded_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Uploaded_At__c</fullName>
    <label>Last Uploaded At</label>
    <type>DateTime</type>
</CustomField>