force-app/main/default/objects/Source_System__c/fields/Source_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_Code__c</fullName>
    <label>Source Code</label>
    <type>Text</type>
    <length>50</length>
    <required>true</required>
    <unique>true</unique>
    <description>Short identifier used to look up transformer class (e.g., WIDEORBIT, STRATA, COXREPS, OPERATIVE, COUNTERPOINT).</description>
</CustomField>