force-app/main/default/objects/Source_System__c/fields/Transformer_Class__c.field-meta.xml
<CustomField>
    <fullName>Transformer_Class__c</fullName>
    <label>Transformer Class</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Apex class name that implements ITransformer for this source (e.g., WideOrbitTransformer). IngestService uses Type.forName() to instantiate it.</description>
</CustomField>